gitops/platform/openbao/exposure/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openbao-route
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public-gateway
      namespace: traefik
      sectionName: http

    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public-gateway
      namespace: traefik
      sectionName: https

  hostnames:
    - openbao.okbear.dev

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: openbao
          port: 8200
          weight: 1
